# bmi_rainrate

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  realization.json
include/: any_type.hpp  any_type_doc.py  basic_includes.hpp  bmi_rainrate_cpp.hpp  stored_var.hpp
src/: bmi_main.cpp  bmi_rainrate_cpp.cpp  bmi_rainrate_unimplemented.cpp
test/cat-27/config/: realization.json
test/cat-27/outputs/ngen/: cat-27.csv  cat-52.csv  cat-67.csv  nex-26_output.csv  nex-34_output.csv  nex-68_output.csv
